kubernetes/services-backd/01-admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
  namespace: backd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: backd/admin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
        - containerPort: 8184
