kubernetes/services-backd/05-sessions-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions
  labels:
    app: sessions
  namespace: backd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sessions
  template:
    metadata:
      labels:
        app: sessions
    spec:
      containers:
      - name: sessions
        image: backd/sessions:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        - containerPort: 8182
