kubernetes/services-backd/07-objects-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: objects
  labels:
    app: objects
  namespace: backd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: objects
  template:
    metadata:
      labels:
        app: objects
    spec:
      containers:
      - name: objects
        image: backd/objects:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        - containerPort: 8181
