kubernetes/services-backd/09-functions-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: functions
  labels:
    app: functions
  namespace: backd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: functions
  template:
    metadata:
      labels:
        app: functions
    spec:
      containers:
      - name: functions
        image: backd/functions:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
        - containerPort: 8185
