kubernetes/services-backd/91-docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  labels:
    app: docs
  namespace: backd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: backd/docs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
