kubernetes/services-backd/08-objects-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: objects
  labels:
    app: objects
  namespace: backd
spec:
  ports:
  - name: "api"
    port: 8081
    targetPort: 8081
  - name: "metrics"
    port: 8181
    targetPort: 8181
  selector:
    app: objects
status:
  loadBalancer: {}
