kubernetes/services-backd/10-functions-service.yml
apiVersion: v1
kind: Service
metadata:
  name: functions
  labels:
    app: functions
  namespace: backd
spec:
  ports:
  - name: "api"
    port: 8085
    targetPort: 8085
  - name: "metrics"
    port: 8185
    targetPort: 8185
  selector:
    app: functions
status:
  loadBalancer: {}
