kubernetes/services-backd/92-docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  labels:
    app: docs
  namespace: backd
spec:
  ports:
  - name: "api"
    port: 80
    targetPort: 80
  selector:
    app: docs
status:
  loadBalancer: {}
