kubernetes/services-backd/99-ingress.yml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: ingressroutetls
#   namespace: default
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: Host(`admin.backd.io`)
#     kind: Rule
#     services:
#     - name: admin
#       port: "api"
#   - match: Host(`auth.backd.io`)
#     kind: Rule
#     services:
#     - name: auth
#       port: "api"
#   - match: Host(`objects.backd.io`)
#     kind: Rule
#     services:
#     - name: objects
#       port: "api"
#   - match: Host(`functions.backd.io`)
#     kind: Rule
#     services:
#     - name: functions
#       port: "api"
#   tls:
#     certResolver: default

# # apiVersion: traefik.containo.us/v1alpha1
# # kind: IngressRoute
# # metadata:
# #   name: ingressroutetls
# #   namespace: default
# # spec:
# #   entryPoints:
# #     - websecure
# #   routes:
# #   - match: Host(`admin.backd.io`)
# #     kind: Rule
# #     services:
# #     - name: admin
# #       port: "api"
# #   tls:
# #     certResolver: default

# # ---
# # apiVersion: traefik.containo.us/v1alpha1
# # kind: IngressRoute
# # metadata:
# #   name: ingressroutetls
# #   namespace: default
# # spec:
# #   entryPoints:
# #     - websecure
# #   routes:
# #   - match: Host(`auth.backd.io`)
# #     kind: Rule
# #     services:
# #     - name: auth
# #       port: "api"
# #   tls:
# #     certResolver: default

# # ---
# # apiVersion: traefik.containo.us/v1alpha1
# # kind: IngressRoute
# # metadata:
# #   name: ingressroutetls
# #   namespace: default
# # spec:
# #   entryPoints:
# #     - websecure
# #   routes:
# #   - match: Host(`objects.backd.io`)
# #     kind: Rule
# #     services:
# #     - name: objects
# #       port: "api"
# #   tls:
# #     certResolver: default

# # ---
# # apiVersion: traefik.containo.us/v1alpha1
# # kind: IngressRoute
# # metadata:
# #   name: ingressroutetls
# #   namespace: default
# # spec:
# #   entryPoints:
# #     - websecure
# #   routes:
# #   - match: Host(`functions.backd.io`)
# #     kind: Rule
# #     services:
# #     - name: functions
# #       port: "api"
# #   tls:
# #     certResolver: default

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backd-ingress
  namespace: backd
spec:
  rules:
  - host: admin.backd.io
    http:
      paths:
      - backend:
          serviceName: admin
          servicePort: "api"
  - host: auth.backd.io
    http:
      paths:
      - backend:
          serviceName: auth
          servicePort: "api"
  - host: objects.backd.io
    http:
      paths:
      - backend:
          serviceName: objects
          servicePort: "api"
  - host: functions.backd.io
    http:
      paths:
      - backend:
          serviceName: functions
          servicePort: "api"
